# reduceSentinel1

./: README.md  pyproject.toml
reduces1/: __init__.py  reduceSentinel1.py
